--- a/src/sass/blocks/_hero.scss
+++ b/src/sass/blocks/_hero.scss
@@ -53,6 +53,8 @@
     &-info {
         position: relative;
         z-index: 1;
+        max-width: 184px;
+        
         padding: 20px 10px;
         margin-top: 31px;
 
