--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -39,10 +39,7 @@
 }
 
 @mixin hero-name-color($color) {
-    background-image: url("data:image/svg+xml,%3Csvg width='105' height='30' viewBox='0 0 105 30' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M102.524 11.3944C102.912 6.48035 99.0527 2.26729 94.1234 2.22472L10.892 1.50592C6.01197 1.46377 2.09866 5.53017 2.32796 10.405L2.77523 19.9141C2.99067 24.4943 6.80006 28.0781 11.3849 28.0139L93.565 26.863C97.9534 26.8015 101.574 23.4091 101.919 19.0339L102.524 11.3944Z' fill='%23#{$color}' stroke='%23#{$color}' stroke-width='3'/%3E%3C/svg%3E%0A");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+    background-image: url("data:image/svg+xml,%3Csvg  viewBox='0 0 105 30' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M102.524 11.3944C102.912 6.48035 99.0527 2.26729 94.1234 2.22472L10.892 1.50592C6.01197 1.46377 2.09866 5.53017 2.32796 10.405L2.77523 19.9141C2.99067 24.4943 6.80006 28.0781 11.3849 28.0139L93.565 26.863C97.9534 26.8015 101.574 23.4091 101.919 19.0339L102.524 11.3944Z' fill='%23#{$color}' stroke='%23#{$color}' stroke-width='3'/%3E%3C/svg%3E%0A");
 }
 
 @mixin crop-text {
